exercises/argocd/argocd_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/issuer: "argo-issuer"
    traefik.ingress.kubernetes.io/redirect-entry-point: "https"
spec:
  rules:
    - host: argo.ichbinich.ch
      http:
        paths:
          - backend:
              service:
                name: argocd-server
                port:
                  number: 80
            path: /
            pathType: Prefix
          - backend:
              service:
                name: argocd-server
                port:
                  number: 80
              path: /api/dex/callback
              pathType: Prefix
  tls:
  - hosts:
    - argo.ichbinich.ch
    secretName: argocd-tls-test
